text align last bug fix mobile 3

--- a/style.css
+++ b/style.css
@@ -554,6 +554,7 @@ a:hover {
 	.header {
 		width: 60%;
 		mix-blend-mode: difference;
+		text-align-last: left;
 		/*margin: 0 1px;*/
 	}
 
@@ -598,7 +599,7 @@ a:hover {
 		text-align: justify;
 	}
 
-	header p {
+	.header p {
 		text-align-last: left;
 	}
 }
